--- a/xf86-video-ati/trunk/PKGBUILD
+++ b/xf86-video-ati/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=xf86-video-ati
 pkgver=6.9.0
-pkgrel=3
-_mesaver="7.1"
+pkgrel=4
+_mesaver="7.2"
 pkgdesc="X.org ati video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
-depends=('libdrm>=2.3.1' 'libgl>=7.1-2' 'libpciaccess')
-makedepends=('pkgconfig' 'xorg-server>=1.5.0' "mesa>=${_mesaver}"
+depends=('libdrm>=2.3.1' 'libgl>=7.2' 'libpciaccess')
+makedepends=('pkgconfig' 'xorg-server>=1.5.0' "mesa>=${_mesaver}" 'fontsproto'
 	     'glproto>=1.4.9' 'xf86driproto' 'diffutils' 'dri2proto')
 conflicts=('xorg-server<1.5.0')
 groups=('xorg-video-drivers')
@@ -19,17 +19,17 @@ source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
        mesa-7.1-link-shared.patch
        git-20080827.patch)
 md5sums=('afa4873f58ae6fa31fedeb9ed31531db'
-         '6bff7f532d16f90f944a400c8bd7074d'
+         '04d379292e023df0b0266825cb0dbde5'
          'f0baa948d9810f268413111ee439d24b'
 	 '22bc6f86627fd2f4a613ce2958f9f325')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/git-20080827.patch" || return 1
-  libtoolize --force --copy || return 1
-  aclocal || return 1
-  autoconf || return 1
-  automake || return 1
+  #patch -Np1 -i "${srcdir}/git-20080827.patch" || return 1
+  #libtoolize --force --copy || return 1
+  #aclocal || return 1
+  #autoconf || return 1
+  #automake || return 1
   ./configure --prefix=/usr \
               --enable-dri || return 1
   make || return 1
