--- a/gconf/trunk/PKGBUILD
+++ b/gconf/trunk/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer:  Jan de Groot <jan@archlinux.org>
 
 pkgname=gconf
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="A configuration database system"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('orbit2>=2.14.12' 'gtk2>=2.12.8-2' 'libxml2>=2.6.30')
-makedepends=('pkgconfig' 'intltool>=0.37.1' 'gtk-doc>=1.9' 'libtool')
+depends=('orbit2>=2.14.16' 'gtk2>=2.14.3' 'libxml2>=2.6.32' 'policykit>=0.9' 'libldap>=2.3.43')
+makedepends=('pkgconfig' 'intltool>=0.40.4' 'gtk-doc>=1.10')
 options=('!libtool')
 install=gconf.install
 url="http://www.gnome.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/GConf/2.22/GConf-${pkgver}.tar.bz2
+source=(http://ftp.gnome.org/pub/gnome/sources/GConf/2.24/GConf-${pkgver}.tar.bz2
 	gconf-merge-schema
 	gconfpkg
 	gconf-reload.patch)
-md5sums=('a56c043afeb1052abaf45407409b0331'
+md5sums=('4971d96f5ba94fe4a69396267bd5afe8'
          '1412bafb06f7d8a9601c8f1c4d72cc06'
          '0a43077786fe85ee10002b753752379a'
          'cfcc8e15be7b8a48de4aa34336ff6090')
@@ -28,7 +28,6 @@ build() {
   aclocal || return 1
   autoconf || return 1
   automake --add-missing || return 1
-  sed -i -e 's/@LDAP_SUPPORT_TRUE@/#/' backends/Makefile.in
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --libexecdir=/usr/lib/GConf \
 	      --disable-static || return 1
