--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,19 +3,18 @@
 
 pkgname=cdparanoia
 pkgver=10.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Compact Disc Digital Audio extraction tool"
 arch=('i686' 'x86_64')
 url="http://www.xiph.org/paranoia/"
 license=('GPL')
 depends=('glibc')
 options=('!makeflags')
-source=(http://downloads.xiph.org/releases/cdparanoia/cdparanoia-III-$pkgver.src.tgz)
-md5sums=('b304bbe8ab63373924a744eac9ebc652')
+source=(http://downloads.xiph.org/releases/cdparanoia/cdparanoia-III-$pkgver.src.tgz gcc.patch)
 
 build() {
   cd "$srcdir/cdparanoia-III-$pkgver"
-
+  patch -p0 -i ${srcdir}/gcc.patch || return 1
   ./configure --prefix=/usr --mandir=/usr/share/man || return 1
   make || return 1
   make prefix="$pkgdir/usr" MANDIR="$pkgdir/usr/share/man" install || return 1
