--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=dhcpcd
 pkgver=4.0.1
-pkgrel=4
+pkgrel=5
 pkgdesc="A DHCP client daemon"
 arch=(i686 x86_64)
 license=('BSD')
@@ -47,13 +47,5 @@ build() {
 	>> $pkgdir/usr/share/licenses/$pkgname/license || return 1
 
 # make man pages FHS compliant
-  rm -rf $pkgdir/usr/man || return 1
-  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd.conf.5 \
-        $pkgdir/usr/share/man/man5/dhcpcd.conf.5 || return 1
-  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd-run-hooks.8 \
-	$pkgdir/usr/share/man/man8/dhcpcd-run-hooks.8 || return 1
-  install -Dm644 $srcdir/$pkgname-$pkgver/dhcpcd.8 \
-        $pkgdir/usr/share/man/man8/dhcpcd.8 || return 1
-
-
+  mv -f $pkgdir/usr/man $pkgdir/usr/share/man || return 1
 }
