--- a/nfsidmap/trunk/PKGBUILD
+++ b/nfsidmap/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=nfsidmap
 pkgver=0.21
-pkgrel=1
+pkgrel=2
 pkgdesc="Library to help mapping IDs, mainly for NFSv4"
 arch=('i686' 'x86_64')
 url="http://www.citi.umich.edu/projects/nfsv4/linux/"
@@ -21,5 +21,6 @@ build() {
   make DESTDIR=$pkgdir install || return 1
 
   # install license
-  install -D -m644 COPYING $startdir/pkg/usr/share/licenses/nfsidmap/LICENSE
+  install -Dm644 COPYING \
+	$pkgdir/usr/share/licenses/nfsidmap/LICENSE || return 1
 }
