--- a/libldap/trunk/PKGBUILD
+++ b/libldap/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 pkgname=libldap
 pkgver=2.3.43
-pkgrel=2
+pkgrel=3	
 pkgdesc="LDAP client libraries"
 arch=(i686 x86_64)
 license=('custom')
@@ -27,6 +27,7 @@ build() {
   ./configure --prefix=/usr \
               --libexecdir=/usr/sbin \
               --sysconfdir=/etc \
+	      --mandir=/usr/share/man \
               --localstatedir=/var/lib/openldap \
               --enable-crypt --enable-dynamic \
               --with-threads --enable-wrappers \
@@ -59,4 +60,7 @@ build() {
 
   install -Dm644 ${startdir}/src/openldap-${pkgver}/LICENSE \
     ${pkgdir}/usr/share/licenses/$pkgname/LICENSE
+
+# one manpage is installed in a non FHS place
+ mv -f $pkgdir/usr/man $pkgdir/usr/share/man
 }
