--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdelibs
-pkgver=4.1.1
-pkgrel=2
+pkgver=4.1.2
+pkgrel=1
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -12,13 +12,13 @@ groups=('kde')
 depends=('libxcursor' 'phonon' 'shared-mime-info' 'qt>=4.4' 'libxpm'
 	 'enchant' 'jasper' 'openexr' 'strigi' 'bzip2' 'libxslt' 'libxtst'
 	 'giflib' 'soprano' 'ca-certificates' 'heimdal' 'pmount' 'xdg-utils')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl' 'hspell')
 replaces=('arts')
 options=('docs')
 install='kdelibs.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kde-applications-menu.patch' 'archlinux-menu.patch')
-md5sums=('d75ec557cd864e3f9150059c3e58ed61'
+md5sums=('cb5f43d2b11669fb17b0a1ecf3736c17'
          '3daa0f01fe26325fb3dbd807a04898ad'
          '0ad42200df2d2b8aab01d2ef4b21e02f')
 
