--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebindings
-pkgver=4.1.1
+pkgver=4.1.2
 pkgrel=1
 pkgdesc="KDE Language Bindings"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
-depends=('kdepimlibs' 'python' 'ruby' 'qscintilla')
+depends=('kdepimlibs' 'kdebase-workspace' 'python' 'ruby' 'qscintilla')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'sip' 'pyqt')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('4b9d6b9b3980327ccef34a44180824df')
+md5sums=('f99b1fe747d6b4b9f444c1ca2f853172')
 
 build() {
 	cd $srcdir
