--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -36,6 +36,10 @@ build() {
   install -d $pkgdir/usr/share/pixmaps/
   ln -s /usr/share/maxima/${pkgver}/xmaxima/maxima-new.png \
 	$pkgdir/usr/share/pixmaps/${pkgname}.png
+
+# remove /usr/share/info/dir file
+  rm -f $pkgdir/usr/share/info/dir
+
 }
 
 
