--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,31 +1,23 @@
 # $Id$
-# Maintainer: James Rayner <iphitus@gmail.com>
+# Maintainer: Giovanni Scafora <giovanni@archlinux.org>
 # Contributor: Andrew Simmons <andrew.simmons@gmail.com>
 
 pkgname=gparted
-pkgver=0.3.8
+pkgver=0.3.9
 pkgrel=1
 pkgdesc="A Partition Magic clone written in C++ using the Gtkmm toolkit"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://gparted.sourceforge.net"
-license=(GPL)
+license=('GPL2')
 depends=('parted>=1.8.8' 'gtkmm')
-makedepends=('intltool')
+makedepends=('intltool' 'pkgconfig')
 install=('gparted.install')
-source=(http://optusnet.dl.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2)
+source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2)
+md5sums=('5b6dc1b154322c9721fce5fd5b9e066e')
 
 build() {
-
-  cd $startdir/src/$pkgname-$pkgver
+  cd "$srcdir/$pkgname-$pkgver"
   ./configure --prefix=/usr
   make || return 1
-  make DESTDIR=$startdir/pkg install
-  
-  sed -i "s/Exec=gparted/Exec=gksu gparted/g" $startdir/pkg/usr/share/applications/gparted.desktop
-
+  make DESTDIR="$pkgdir/" install
 }
-
-
-
-
-md5sums=('7c890472168b0b5e5f353b445758ab3f')
