--- a/glibmm/trunk/PKGBUILD
+++ b/glibmm/trunk/PKGBUILD
@@ -3,22 +3,21 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=glibmm
-pkgver=2.16.4
-pkgrel=2
+pkgver=2.18.0
+pkgrel=1
 pkgdesc="Glib-- (glibmm) is a C++ interface for glib"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('glib2>=2.16.4' 'libsigc++2.0>=2.2.2')
+depends=('glib2>=2.18.1' 'libsigc++2.0>=2.2.2')
 makedepends=('pkgconfig')
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.16/${pkgname}-${pkgver}.tar.bz2)
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.18/${pkgname}-${pkgver}.tar.bz2)
 options=('!libtool')
 url="http://gtkmm.sourceforge.net/"
-md5sums=('fe2e91fa93759ffc812e80ca50ace233')
+md5sums=('1a0df362e15e7f850b8361b5102f1f16')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
-  rm -rf ${pkgdir}/usr/share/devhelp || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
