--- a/gtkmm/trunk/PKGBUILD
+++ b/gtkmm/trunk/PKGBUILD
@@ -3,24 +3,24 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtkmm
-pkgver=2.12.7
+pkgver=2.14.1
 pkgrel=1
 pkgdesc="Gtk-- (gtkmm) is a C++ interface for the popular GUI library gtk+"
 arch=(i686 x86_64)
-depends=('gtk2>=2.12.9-2' 'glibmm>=2.16.2' 'cairomm>=1.6.0')
+depends=('gtk2>=2.14.3' 'pangomm>=2.14.0')
 license=('LGPL')
 options=('!libtool' '!emptydirs')
 url="http://gtkmm.sourceforge.net/"
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.12/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ad199f4a392799134c128deab48fee30')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.14/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('0209b424987a74c956ea6b70fddaaa37')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 
   # Remove devhelp documentation file and example demonstration binary
-  rm -rf ${startdir}/pkg/usr/share/devhelp
-  rm -f ${startdir}/pkg/usr/bin/demo
+  #rm -rf ${startdir}/pkg/usr/share/devhelp
+  #rm -f ${startdir}/pkg/usr/bin/demo
 }
