--- a/gnome-vfsmm/trunk/PKGBUILD
+++ b/gnome-vfsmm/trunk/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: Kritoke <typeolinux@yahoo.com>
 
 pkgname=gnome-vfsmm
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="A C++ wrapper for gnome-vfs."
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('gnome-vfs>=2.22.0' 'glibmm>=2.16.0')
+depends=('gnome-vfs>=2.24.0' 'glibmm>=2.18.0')
 makedepends=('pkgconfig' 'doxygen')
 options=('!libtool')
 url="http://gtkmm.sourceforge.net/"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('80b86e6f88ee0bd3a1babb686d0be03a')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('f02257451583832c4d67f4accba7ad62')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
