--- a/libgnomemm/trunk/PKGBUILD
+++ b/libgnomemm/trunk/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: Kritoke <typeolinux@yahoo.com>
 
 pkgname=libgnomemm
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="C++ bindings for libgnome."
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libgnome>=2.22.0' 'gtkmm>=2.12.5')
+depends=('libgnome>=2.24.1' 'gtkmm>=2.14.1')
 makedepends=('pkgconfig')
 options=('!libtool')
 url="http://gtkmm.sourceforge.net/"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a07209b2cfbc630f8c4d46b6a6f1db32')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e77dd1df8e2eb1652d28e30d7c5252a4')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
