--- a/libxml++2/trunk/PKGBUILD
+++ b/libxml++2/trunk/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer: damir <damir@archlinux.org>
 
 pkgname=libxml++2
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="C++ bindings to libxml - version 2x"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://libxmlplusplus.sourceforge.net/"
-depends=('libxml2>=2.6.31' 'glibmm>=2.16.0')
+depends=('libxml2>=2.6.32' 'glibmm>=2.18.0')
 makedepends=('pkgconfig')
 options=('!libtool' '!emptydirs')
-source=(http://ftp.gnome.org/pub/GNOME/sources/libxml++/2.22/libxml++-${pkgver}.tar.bz2)
-md5sums=('9a9b3ba876fe212df3a73c5a97e9235a')
+source=(http://ftp.gnome.org/pub/GNOME/sources/libxml++/2.24/libxml++-${pkgver}.tar.bz2)
+md5sums=('195a6ee87537086165f7a6578eaf18b4')
 
 build() {
-  cd ${startdir}/src/libxml++-${pkgver}
+  cd "${srcdir}/libxml++-${pkgver}"
   ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
