--- a/python-feedparser/trunk/PKGBUILD
+++ b/python-feedparser/trunk/PKGBUILD
@@ -3,19 +3,21 @@
 # Contributor: Simo Leone <neotuli@gmail.com>
 
 pkgname=python-feedparser
-_pkgnameorig=feedparser
 pkgver=4.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Parse RSS and Atom feeds in Python"
 arch=('i686' 'x86_64')
 url="http://feedparser.sf.net"
 license=('custom')
 depends=('python' 'libxml2' )
-source=(http://downloads.sourceforge.net/feedparser/${_pkgnameorig}-${pkgver}.zip)
-md5sums=('7ab1140c1e29d4cd52ab20fa7b1f8640')
+source=(http://downloads.sourceforge.net/feedparser/feedparser-${pkgver}.zip
+        feedparser_utf8_decoding.patch)
+md5sums=('7ab1140c1e29d4cd52ab20fa7b1f8640'
+         '1412caa1577260945df5ef0f5efabc62')
 
 build() {
-  cd ${srcdir}/${_pkgnameorig}
+  cd ${srcdir}
+  patch -Np0 -i feedparser_utf8_decoding.patch
   python setup.py build
   python setup.py install --root=${pkgdir}
   install -Dm644 LICENSE ${pkgdir}/usr/share/licenses/${pkgname}/license
