--- a/texinfo/trunk/PKGBUILD
+++ b/texinfo/trunk/PKGBUILD
@@ -3,22 +3,24 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=texinfo
-pkgver=4.12
-pkgrel=3
+pkgver=4.13a
+pkgrel=1
 pkgdesc="Utilities to work with and produce manuals, ASCII text, and on-line documentation from a single source file"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/texinfo/"
 license=('GPL3')
-groups=('base-devel')
+groups=('base')
 depends=('ncurses')
+install=texinfo.install
 source=(ftp://ftp.gnu.org/pub/gnu/${pkgname}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('e9216fb657e1555a289a14a74dac8f4f')
-sha1sums=('1587ef35b68ea5d0f7a6801a86977d8b825e2f1b')
+md5sums=('71ba711519209b5fb583fed2b3d86fcb')
+sha1sums=('a1533cf8e03ea4fa6c443b73f4c85e4da04dead0')
 
 build() {
-   cd ${startdir}/src/${pkgname}-${pkgver}
-   ./configure --prefix=/usr
+   cd ${srcdir}/${pkgname}-4.13
+   ./configure --prefix=/usr || return 1
    make || return 1
-   make DESTDIR=${startdir}/pkg install
+   make DESTDIR=${pkgdir} install || return 1
    rm -f ${pkgdir}/usr/share/info/dir
+   gzip ${pkgdir}/usr/share/info/*
 }
