--- a/nasm/trunk/PKGBUILD
+++ b/nasm/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 # Committer: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=nasm
-pkgver=2.01
+pkgver=2.03.01
 pkgrel=1
 pkgdesc="80x86 assembler designed for portability and modularity"
 url="http://nasm.sourceforge.net"
 license=('LGPL')
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 depends=('glibc')
-source=(http://downloads.sourceforge.net/nasm/nasm-$pkgver.tar.bz2)
-md5sums=('93384e87a452607c8d4ce533939295bd')
+source=(http://downloads.sourceforge.net/nasm/nasm-${pkgver}.tar.bz2)
+md5sums=('3d3b4c5b763602efd230f49fb883bb1b')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
+  cd ${srcdir}/${pkgname}-${pkgver}
+  ./configure --prefix=/usr || return 1
   make || return 1
-  make prefix=$startdir/pkg/usr install
+  make INSTALLROOT=${pkgdir} install || return 1
 }
