--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,17 +3,18 @@
 
 pkgname=skanlite
 pkgver=0.2
-_kdever=4.1.1
-pkgrel=3
+_kdever=4.1.2
+pkgrel=4
 pkgdesc="Image Scanning Application for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('LGPL')
+groups=('kde-extragear')
 depends=('kdegraphics')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('f96290416d81cad843479fa2da68f2bb')
+md5sums=('3c23fbd137c92ee4add4a6bcd9ebc453')
 
 build() {
 	cd $srcdir
