--- a/kcoloredit/trunk/PKGBUILD
+++ b/kcoloredit/trunk/PKGBUILD
@@ -13,6 +13,7 @@ groups=('kde-extragear')
 depends=('kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
+install='kcoloredit.install'
 source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
 md5sums=('619d188297ccd71a85fb16384cf17ef4')
 
