--- a/gconf-editor/trunk/PKGBUILD
+++ b/gconf-editor/trunk/PKGBUILD
@@ -2,28 +2,28 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gconf-editor
-pkgver=2.22.0
+pkgver=2.24.0.1
 pkgrel=1
 pkgdesc="Graphical gconf registry editor"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgnomeui>=2.22.01')
-makedepends=('pkgconfig' 'perlxml' 'gnome-doc-utils>=0.12.2')
+depends=('libgnomeui>=2.24.0')
+makedepends=('pkgconfig' 'perlxml' 'gnome-doc-utils>=0.14.0')
 url="http://www.gnome.org"
 groups=('gnome-extra')
 options=(!emptydirs)
 install=gconf-editor.install
-source=(http://ftp.gnome.org/pub/gnome/sources/gconf-editor/2.22/gconf-editor-${pkgver}.tar.bz2)
-md5sums=('7ca99aec214dd855b5de7dacc8937055')
+source=(http://ftp.gnome.org/pub/gnome/sources/gconf-editor/2.24/gconf-editor-${pkgver}.tar.bz2)
+md5sums=('e2e1cddbebda87e794fabdbe3928ef6f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-scrollkeeper || return 1
   make || return 1
-  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
   
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
